CCE-680: empty started page added, reordered menu to sort the left nav alphabetically. fixed mobile bug with page header hiding behind the super nav.

--- a/docs/template/public/less/_starter-pages.less
+++ b/docs/template/public/less/_starter-pages.less
@@ -13,6 +13,7 @@
 @media (max-width: 768px) {
  #content.starterpages{
     left: 0;
+    top: 100px;
  }
 }
 .kss-main.starterpages{
